k0gram.output
Terminals unused in grammar

    BREAK
    CONTINUE
    DO
    K_NULL
    WHEN
    OP_ERROR
    ILL_IDENT
    UNCLOSED_COMMENT
    COULD_NOT_MATCH
    KEYWORD_ERROR
    NEG
    REQ
    RNEQ
    NN_ASSERT
    LSQUARE
    SAFE_CALL
    ELVIS
    NULLABLE
    RANGE_EXCL
    TYPE_CAST
    RSQUARE


Grammar

    0 $accept: program $end

    1 program: top_level_list

    2 top_level_list: top_level_list top_level_decl
    3               | top_level_decl

    4 top_level_decl: function_decl
    5               | importHeader
    6               | global_var_decl
    7               | global_var_init

    8 importHeader: IMPORT IDENT

    9 type: BYTE_TYPE
   10     | SHORT_TYPE
   11     | INT_TYPE
   12     | LONG_TYPE
   13     | FLOAT_TYPE
   14     | DOUBLE_TYPE
   15     | BOOLEAN_TYPE
   16     | STRING_TYPE
   17     | ARRAY LT type GT

   18 val_var: VAL
   19        | VAR

   20 literal: INT
   21        | REAL
   22        | STRING
   23        | MULTI_STRING
   24        | CHAR

   25 bool_literal: K_TRUE
   26             | K_FALSE

   27 global_var_decl: val_var IDENT COLON type SEMICOLON
   28                | val_var IDENT COLON type ASSIGN expr SEMICOLON

   29 global_var_init: val_var IDENT ASSIGN expr SEMICOLON

   30 fun_body_var_decl: val_var IDENT COLON type SEMICOLON
   31                  | val_var IDENT COLON type ASSIGN expr SEMICOLON

   32 fun_body_var_init: val_var IDENT ASSIGN expr SEMICOLON

   33 function_var_decl: IDENT COLON type

   34 function_decl: FUN IDENT LPAREN parameter_list RPAREN COLON type function_body
   35              | FUN IDENT LPAREN parameter_list RPAREN function_body
   36              | FUN IDENT LPAREN parameter_list RPAREN SEMICOLON

   37 parameter_list: function_var_decl
   38               | parameter_list COMMA function_var_decl
   39               | ε

   40 function_body: LBRACE fun_body_var_list statement_list RBRACE

   41 fun_body_var_list: fun_body_var_list fun_body_var_decl
   42                  | fun_body_var_list fun_body_var_init
   43                  | ε

   44 statement_list: statement_list statement
   45               | ε

   46 statement: non_control_statement
   47          | loop_statement
   48          | if_statement
   49          | RETURN expr SEMICOLON

   50 non_control_statement: expr SEMICOLON

   51 expr: assignment_expr

   52 logical_or_expr: logical_and_expr
   53                | logical_or_expr OR logical_and_expr

   54 logical_and_expr: equality_expr
   55                 | logical_and_expr AND equality_expr

   56 equality_expr: relational_expr
   57              | equality_expr EQ relational_expr
   58              | equality_expr NEQ relational_expr

   59 relational_expr: additive_expr
   60                | relational_expr LT additive_expr
   61                | relational_expr GT additive_expr
   62                | relational_expr LTE additive_expr
   63                | relational_expr GTE additive_expr

   64 assignment_expr: logical_or_expr
   65                | IDENT ASSIGN assignment_expr
   66                | IDENT PLUS_ASSIGN assignment_expr
   67                | IDENT MINUS_ASSIGN assignment_expr

   68 additive_expr: multiplicative_expr
   69              | additive_expr PLUS multiplicative_expr
   70              | additive_expr MINUS multiplicative_expr

   71 multiplicative_expr: unary_expr
   72                    | multiplicative_expr MUL unary_expr
   73                    | multiplicative_expr DIV unary_expr
   74                    | multiplicative_expr MOD unary_expr

   75 unary_expr: primary_expr
   76           | MINUS unary_expr
   77           | NOT unary_expr
   78           | INC unary_expr
   79           | DEC unary_expr

   80 primary_expr: function_call
   81             | IDENT
   82             | literal
   83             | LPAREN expr RPAREN
   84             | bool_literal

   85 function_call: IDENT LPAREN function_call_values_list RPAREN

   86 function_call_values_list: functionCallVal
   87                          | function_call_values_list COMMA functionCallVal
   88                          | ε

   89 functionCallVal: literal
   90                | IDENT
   91                | LPAREN literal RPAREN DOT function_call

   92 block: LBRACE statement_list RBRACE

   93 loop_statement: for_statement
   94               | while_statement

   95 for_statement: FOR LPAREN IDENT IN IDENT RANGE_INCL IDENT RPAREN control_structure_body
   96              | FOR LPAREN IDENT IN literal RANGE_INCL IDENT RPAREN control_structure_body
   97              | FOR LPAREN IDENT IN IDENT RANGE_INCL literal RPAREN control_structure_body
   98              | FOR LPAREN IDENT IN literal RANGE_INCL literal RPAREN control_structure_body

   99 while_statement: WHILE LPAREN expr RPAREN control_structure_body

  100 control_structure_body: block
  101                       | statement

  102 if_statement: IF LPAREN expr RPAREN control_structure_body
  103             | IF LPAREN expr RPAREN control_structure_body ELSE control_structure_body


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    BREAK <treeptr> (258)
    CONTINUE <treeptr> (259)
    DO <treeptr> (260)
    ELSE <treeptr> (261) 103
    K_FALSE <treeptr> (262) 26
    FOR <treeptr> (263) 95 96 97 98
    FUN <treeptr> (264) 34 35 36
    IF <treeptr> (265) 102 103
    IN <treeptr> (266) 95 96 97 98
    K_NULL <treeptr> (267)
    RETURN <treeptr> (268) 49
    K_TRUE <treeptr> (269) 25
    VAL <treeptr> (270) 18
    VAR <treeptr> (271) 19
    WHEN <treeptr> (272)
    WHILE <treeptr> (273) 99
    IMPORT <treeptr> (274) 8
    OP_ERROR <treeptr> (275)
    ILL_IDENT <treeptr> (276)
    UNCLOSED_COMMENT <treeptr> (277)
    COULD_NOT_MATCH <treeptr> (278)
    KEYWORD_ERROR <treeptr> (279)
    ASSIGN <treeptr> (280) 28 29 31 32 65
    PLUS_ASSIGN <treeptr> (281) 66
    MINUS_ASSIGN <treeptr> (282) 67
    PLUS <treeptr> (283) 69
    MINUS <treeptr> (284) 70 76
    MUL <treeptr> (285) 72
    DIV <treeptr> (286) 73
    MOD <treeptr> (287) 74
    INC <treeptr> (288) 78
    DEC <treeptr> (289) 79
    NEG <treeptr> (290)
    EQ <treeptr> (291) 57
    NEQ <treeptr> (292) 58
    GT <treeptr> (293) 17 61
    LT <treeptr> (294) 17 60
    GTE <treeptr> (295) 63
    LTE <treeptr> (296) 62
    REQ <treeptr> (297)
    RNEQ <treeptr> (298)
    AND <treeptr> (299) 55
    OR <treeptr> (300) 53
    NOT <treeptr> (301) 77
    NN_ASSERT <treeptr> (302)
    LSQUARE <treeptr> (303)
    DOT <treeptr> (304) 91
    SAFE_CALL <treeptr> (305)
    ELVIS <treeptr> (306)
    NULLABLE <treeptr> (307)
    RANGE_INCL <treeptr> (308) 95 96 97 98
    RANGE_EXCL <treeptr> (309)
    TYPE_CAST <treeptr> (310)
    LPAREN <treeptr> (311) 34 35 36 83 85 91 95 96 97 98 99 102 103
    RPAREN <treeptr> (312) 34 35 36 83 85 91 95 96 97 98 99 102 103
    COMMA <treeptr> (313) 38 87
    SEMICOLON <treeptr> (314) 27 28 29 30 31 32 36 49 50
    LBRACE <treeptr> (315) 40 92
    RBRACE <treeptr> (316) 40 92
    COLON <treeptr> (317) 27 28 30 31 33 34
    RSQUARE <treeptr> (318)
    INT <treeptr> (319) 20
    REAL <treeptr> (320) 21
    STRING <treeptr> (321) 22
    MULTI_STRING <treeptr> (322) 23
    CHAR <treeptr> (323) 24
    IDENT <treeptr> (324) 8 27 28 29 30 31 32 33 34 35 36 65 66 67 81 85 90 95 96 97 98
    BYTE_TYPE <treeptr> (325) 9
    SHORT_TYPE <treeptr> (326) 10
    INT_TYPE <treeptr> (327) 11
    LONG_TYPE <treeptr> (328) 12
    FLOAT_TYPE <treeptr> (329) 13
    DOUBLE_TYPE <treeptr> (330) 14
    BOOLEAN_TYPE <treeptr> (331) 15
    STRING_TYPE <treeptr> (332) 16
    ARRAY <treeptr> (333) 17
    IFX (334)


Nonterminals, with rules where they appear

    $accept (80)
        on left: 0
    program <treeptr> (81)
        on left: 1
        on right: 0
    top_level_list <treeptr> (82)
        on left: 2 3
        on right: 1 2
    top_level_decl <treeptr> (83)
        on left: 4 5 6 7
        on right: 2 3
    importHeader <treeptr> (84)
        on left: 8
        on right: 5
    type <treeptr> (85)
        on left: 9 10 11 12 13 14 15 16 17
        on right: 17 27 28 30 31 33 34
    val_var <treeptr> (86)
        on left: 18 19
        on right: 27 28 29 30 31 32
    literal <treeptr> (87)
        on left: 20 21 22 23 24
        on right: 82 89 91 96 97 98
    bool_literal <treeptr> (88)
        on left: 25 26
        on right: 84
    global_var_decl <treeptr> (89)
        on left: 27 28
        on right: 6
    global_var_init <treeptr> (90)
        on left: 29
        on right: 7
    fun_body_var_decl <treeptr> (91)
        on left: 30 31
        on right: 41
    fun_body_var_init <treeptr> (92)
        on left: 32
        on right: 42
    function_var_decl <treeptr> (93)
        on left: 33
        on right: 37 38
    function_decl <treeptr> (94)
        on left: 34 35 36
        on right: 4
    parameter_list <treeptr> (95)
        on left: 37 38 39
        on right: 34 35 36 38
    function_body <treeptr> (96)
        on left: 40
        on right: 34 35
    fun_body_var_list <treeptr> (97)
        on left: 41 42 43
        on right: 40 41 42
    statement_list <treeptr> (98)
        on left: 44 45
        on right: 40 44 92
    statement <treeptr> (99)
        on left: 46 47 48 49
        on right: 44 101
    non_control_statement <treeptr> (100)
        on left: 50
        on right: 46
    expr <treeptr> (101)
        on left: 51
        on right: 28 29 31 32 49 50 83 99 102 103
    logical_or_expr <treeptr> (102)
        on left: 52 53
        on right: 53 64
    logical_and_expr <treeptr> (103)
        on left: 54 55
        on right: 52 53 55
    equality_expr <treeptr> (104)
        on left: 56 57 58
        on right: 54 55 57 58
    relational_expr <treeptr> (105)
        on left: 59 60 61 62 63
        on right: 56 57 58 60 61 62 63
    assignment_expr <treeptr> (106)
        on left: 64 65 66 67
        on right: 51 65 66 67
    additive_expr <treeptr> (107)
        on left: 68 69 70
        on right: 59 60 61 62 63 69 70
    multiplicative_expr <treeptr> (108)
        on left: 71 72 73 74
        on right: 68 69 70 72 73 74
    unary_expr <treeptr> (109)
        on left: 75 76 77 78 79
        on right: 71 72 73 74 76 77 78 79
    primary_expr <treeptr> (110)
        on left: 80 81 82 83 84
        on right: 75
    function_call <treeptr> (111)
        on left: 85
        on right: 80 91
    function_call_values_list <treeptr> (112)
        on left: 86 87 88
        on right: 85 87
    functionCallVal <treeptr> (113)
        on left: 89 90 91
        on right: 86 87
    block <treeptr> (114)
        on left: 92
        on right: 100
    loop_statement <treeptr> (115)
        on left: 93 94
        on right: 47
    for_statement <treeptr> (116)
        on left: 95 96 97 98
        on right: 93
    while_statement <treeptr> (117)
        on left: 99
        on right: 94
    control_structure_body <treeptr> (118)
        on left: 100 101
        on right: 95 96 97 98 99 102 103
    if_statement <treeptr> (119)
        on left: 102 103
        on right: 48


State 0

    0 $accept: • program $end

    FUN     shift, and go to state 1
    VAL     shift, and go to state 2
    VAR     shift, and go to state 3
    IMPORT  shift, and go to state 4

    program          go to state 5
    top_level_list   go to state 6
    top_level_decl   go to state 7
    importHeader     go to state 8
    val_var          go to state 9
    global_var_decl  go to state 10
    global_var_init  go to state 11
    function_decl    go to state 12


State 1

   34 function_decl: FUN • IDENT LPAREN parameter_list RPAREN COLON type function_body
   35              | FUN • IDENT LPAREN parameter_list RPAREN function_body
   36              | FUN • IDENT LPAREN parameter_list RPAREN SEMICOLON

    IDENT  shift, and go to state 13


State 2

   18 val_var: VAL •

    $default  reduce using rule 18 (val_var)


State 3

   19 val_var: VAR •

    $default  reduce using rule 19 (val_var)


State 4

    8 importHeader: IMPORT • IDENT

    IDENT  shift, and go to state 14


State 5

    0 $accept: program • $end

    $end  shift, and go to state 15


State 6

    1 program: top_level_list •
    2 top_level_list: top_level_list • top_level_decl

    FUN     shift, and go to state 1
    VAL     shift, and go to state 2
    VAR     shift, and go to state 3
    IMPORT  shift, and go to state 4

    $default  reduce using rule 1 (program)

    top_level_decl   go to state 16
    importHeader     go to state 8
    val_var          go to state 9
    global_var_decl  go to state 10
    global_var_init  go to state 11
    function_decl    go to state 12


State 7

    3 top_level_list: top_level_decl •

    $default  reduce using rule 3 (top_level_list)


State 8

    5 top_level_decl: importHeader •

    $default  reduce using rule 5 (top_level_decl)


State 9

   27 global_var_decl: val_var • IDENT COLON type SEMICOLON
   28                | val_var • IDENT COLON type ASSIGN expr SEMICOLON
   29 global_var_init: val_var • IDENT ASSIGN expr SEMICOLON

    IDENT  shift, and go to state 17


State 10

    6 top_level_decl: global_var_decl •

    $default  reduce using rule 6 (top_level_decl)


State 11

    7 top_level_decl: global_var_init •

    $default  reduce using rule 7 (top_level_decl)


State 12

    4 top_level_decl: function_decl •

    $default  reduce using rule 4 (top_level_decl)


State 13

   34 function_decl: FUN IDENT • LPAREN parameter_list RPAREN COLON type function_body
   35              | FUN IDENT • LPAREN parameter_list RPAREN function_body
   36              | FUN IDENT • LPAREN parameter_list RPAREN SEMICOLON

    LPAREN  shift, and go to state 18


State 14

    8 importHeader: IMPORT IDENT •

    $default  reduce using rule 8 (importHeader)


State 15

    0 $accept: program $end •

    $default  accept


State 16

    2 top_level_list: top_level_list top_level_decl •

    $default  reduce using rule 2 (top_level_list)


State 17

   27 global_var_decl: val_var IDENT • COLON type SEMICOLON
   28                | val_var IDENT • COLON type ASSIGN expr SEMICOLON
   29 global_var_init: val_var IDENT • ASSIGN expr SEMICOLON

    ASSIGN  shift, and go to state 19
    COLON   shift, and go to state 20


State 18

   34 function_decl: FUN IDENT LPAREN • parameter_list RPAREN COLON type function_body
   35              | FUN IDENT LPAREN • parameter_list RPAREN function_body
   36              | FUN IDENT LPAREN • parameter_list RPAREN SEMICOLON

    IDENT  shift, and go to state 21

    $default  reduce using rule 39 (parameter_list)

    function_var_decl  go to state 22
    parameter_list     go to state 23


State 19

   29 global_var_init: val_var IDENT ASSIGN • expr SEMICOLON

    K_FALSE       shift, and go to state 24
    K_TRUE        shift, and go to state 25
    MINUS         shift, and go to state 26
    INC           shift, and go to state 27
    DEC           shift, and go to state 28
    NOT           shift, and go to state 29
    LPAREN        shift, and go to state 30
    INT           shift, and go to state 31
    REAL          shift, and go to state 32
    STRING        shift, and go to state 33
    MULTI_STRING  shift, and go to state 34
    CHAR          shift, and go to state 35
    IDENT         shift, and go to state 36

    literal              go to state 37
    bool_literal         go to state 38
    expr                 go to state 39
    logical_or_expr      go to state 40
    logical_and_expr     go to state 41
    equality_expr        go to state 42
    relational_expr      go to state 43
    assignment_expr      go to state 44
    additive_expr        go to state 45
    multiplicative_expr  go to state 46
    unary_expr           go to state 47
    primary_expr         go to state 48
    function_call        go to state 49


State 20

   27 global_var_decl: val_var IDENT COLON • type SEMICOLON
   28                | val_var IDENT COLON • type ASSIGN expr SEMICOLON

    BYTE_TYPE     shift, and go to state 50
    SHORT_TYPE    shift, and go to state 51
    INT_TYPE      shift, and go to state 52
    LONG_TYPE     shift, and go to state 53
    FLOAT_TYPE    shift, and go to state 54
    DOUBLE_TYPE   shift, and go to state 55
    BOOLEAN_TYPE  shift, and go to state 56
    STRING_TYPE   shift, and go to state 57
    ARRAY         shift, and go to state 58

    type  go to state 59


State 21

   33 function_var_decl: IDENT • COLON type

    COLON  shift, and go to state 60


State 22

   37 parameter_list: function_var_decl •

    $default  reduce using rule 37 (parameter_list)


State 23

   34 function_decl: FUN IDENT LPAREN parameter_list • RPAREN COLON type function_body
   35              | FUN IDENT LPAREN parameter_list • RPAREN function_body
   36              | FUN IDENT LPAREN parameter_list • RPAREN SEMICOLON
   38 parameter_list: parameter_list • COMMA function_var_decl

    RPAREN  shift, and go to state 61
    COMMA   shift, and go to state 62


State 24

   26 bool_literal: K_FALSE •

    $default  reduce using rule 26 (bool_literal)


State 25

   25 bool_literal: K_TRUE •

    $default  reduce using rule 25 (bool_literal)


State 26

   76 unary_expr: MINUS • unary_expr

    K_FALSE       shift, and go to state 24
    K_TRUE        shift, and go to state 25
    MINUS         shift, and go to state 26
    INC           shift, and go to state 27
    DEC           shift, and go to state 28
    NOT           shift, and go to state 29
    LPAREN        shift, and go to state 30
    INT           shift, and go to state 31
    REAL          shift, and go to state 32
    STRING        shift, and go to state 33
    MULTI_STRING  shift, and go to state 34
    CHAR          shift, and go to state 35
    IDENT         shift, and go to state 63

    literal        go to state 37
    bool_literal   go to state 38
    unary_expr     go to state 64
    primary_expr   go to state 48
    function_call  go to state 49


State 27

   78 unary_expr: INC • unary_expr

    K_FALSE       shift, and go to state 24
    K_TRUE        shift, and go to state 25
    MINUS         shift, and go to state 26
    INC           shift, and go to state 27
    DEC           shift, and go to state 28
    NOT           shift, and go to state 29
    LPAREN        shift, and go to state 30
    INT           shift, and go to state 31
    REAL          shift, and go to state 32
    STRING        shift, and go to state 33
    MULTI_STRING  shift, and go to state 34
    CHAR          shift, and go to state 35
    IDENT         shift, and go to state 63

    literal        go to state 37
    bool_literal   go to state 38
    unary_expr     go to state 65
    primary_expr   go to state 48
    function_call  go to state 49


State 28

   79 unary_expr: DEC • unary_expr

    K_FALSE       shift, and go to state 24
    K_TRUE        shift, and go to state 25
    MINUS         shift, and go to state 26
    INC           shift, and go to state 27
    DEC           shift, and go to state 28
    NOT           shift, and go to state 29
    LPAREN        shift, and go to state 30
    INT           shift, and go to state 31
    REAL          shift, and go to state 32
    STRING        shift, and go to state 33
    MULTI_STRING  shift, and go to state 34
    CHAR          shift, and go to state 35
    IDENT         shift, and go to state 63

    literal        go to state 37
    bool_literal   go to state 38
    unary_expr     go to state 66
    primary_expr   go to state 48
    function_call  go to state 49


State 29

   77 unary_expr: NOT • unary_expr

    K_FALSE       shift, and go to state 24
    K_TRUE        shift, and go to state 25
    MINUS         shift, and go to state 26
    INC           shift, and go to state 27
    DEC           shift, and go to state 28
    NOT           shift, and go to state 29
    LPAREN        shift, and go to state 30
    INT           shift, and go to state 31
    REAL          shift, and go to state 32
    STRING        shift, and go to state 33
    MULTI_STRING  shift, and go to state 34
    CHAR          shift, and go to state 35
    IDENT         shift, and go to state 63

    literal        go to state 37
    bool_literal   go to state 38
    unary_expr     go to state 67
    primary_expr   go to state 48
    function_call  go to state 49


State 30

   83 primary_expr: LPAREN • expr RPAREN

    K_FALSE       shift, and go to state 24
    K_TRUE        shift, and go to state 25
    MINUS         shift, and go to state 26
    INC           shift, and go to state 27
    DEC           shift, and go to state 28
    NOT           shift, and go to state 29
    LPAREN        shift, and go to state 30
    INT           shift, and go to state 31
    REAL          shift, and go to state 32
    STRING        shift, and go to state 33
    MULTI_STRING  shift, and go to state 34
    CHAR          shift, and go to state 35
    IDENT         shift, and go to state 36

    literal              go to state 37
    bool_literal         go to state 38
    expr                 go to state 68
    logical_or_expr      go to state 40
    logical_and_expr     go to state 41
    equality_expr        go to state 42
    relational_expr      go to state 43
    assignment_expr      go to state 44
    additive_expr        go to state 45
    multiplicative_expr  go to state 46
    unary_expr           go to state 47
    primary_expr         go to state 48
    function_call        go to state 49


State 31

   20 literal: INT •

    $default  reduce using rule 20 (literal)


State 32

   21 literal: REAL •

    $default  reduce using rule 21 (literal)


State 33

   22 literal: STRING •

    $default  reduce using rule 22 (literal)


State 34

   23 literal: MULTI_STRING •

    $default  reduce using rule 23 (literal)


State 35

   24 literal: CHAR •

    $default  reduce using rule 24 (literal)


State 36

   65 assignment_expr: IDENT • ASSIGN assignment_expr
   66                | IDENT • PLUS_ASSIGN assignment_expr
   67                | IDENT • MINUS_ASSIGN assignment_expr
   81 primary_expr: IDENT •
   85 function_call: IDENT • LPAREN function_call_values_list RPAREN

    ASSIGN        shift, and go to state 69
    PLUS_ASSIGN   shift, and go to state 70
    MINUS_ASSIGN  shift, and go to state 71
    LPAREN        shift, and go to state 72

    $default  reduce using rule 81 (primary_expr)


State 37

   82 primary_expr: literal •

    $default  reduce using rule 82 (primary_expr)


State 38

   84 primary_expr: bool_literal •

    $default  reduce using rule 84 (primary_expr)


State 39

   29 global_var_init: val_var IDENT ASSIGN expr • SEMICOLON

    SEMICOLON  shift, and go to state 73


State 40

   53 logical_or_expr: logical_or_expr • OR logical_and_expr
   64 assignment_expr: logical_or_expr •

    OR  shift, and go to state 74

    $default  reduce using rule 64 (assignment_expr)


State 41

   52 logical_or_expr: logical_and_expr •
   55 logical_and_expr: logical_and_expr • AND equality_expr

    AND  shift, and go to state 75

    $default  reduce using rule 52 (logical_or_expr)


State 42

   54 logical_and_expr: equality_expr •
   57 equality_expr: equality_expr • EQ relational_expr
   58              | equality_expr • NEQ relational_expr

    EQ   shift, and go to state 76
    NEQ  shift, and go to state 77

    $default  reduce using rule 54 (logical_and_expr)


State 43

   56 equality_expr: relational_expr •
   60 relational_expr: relational_expr • LT additive_expr
   61                | relational_expr • GT additive_expr
   62                | relational_expr • LTE additive_expr
   63                | relational_expr • GTE additive_expr

    GT   shift, and go to state 78
    LT   shift, and go to state 79
    GTE  shift, and go to state 80
    LTE  shift, and go to state 81

    $default  reduce using rule 56 (equality_expr)


State 44

   51 expr: assignment_expr •

    $default  reduce using rule 51 (expr)


State 45

   59 relational_expr: additive_expr •
   69 additive_expr: additive_expr • PLUS multiplicative_expr
   70              | additive_expr • MINUS multiplicative_expr

    PLUS   shift, and go to state 82
    MINUS  shift, and go to state 83

    $default  reduce using rule 59 (relational_expr)


State 46

   68 additive_expr: multiplicative_expr •
   72 multiplicative_expr: multiplicative_expr • MUL unary_expr
   73                    | multiplicative_expr • DIV unary_expr
   74                    | multiplicative_expr • MOD unary_expr

    MUL  shift, and go to state 84
    DIV  shift, and go to state 85
    MOD  shift, and go to state 86

    $default  reduce using rule 68 (additive_expr)


State 47

   71 multiplicative_expr: unary_expr •

    $default  reduce using rule 71 (multiplicative_expr)


State 48

   75 unary_expr: primary_expr •

    $default  reduce using rule 75 (unary_expr)


State 49

   80 primary_expr: function_call •

    $default  reduce using rule 80 (primary_expr)


State 50

    9 type: BYTE_TYPE •

    $default  reduce using rule 9 (type)


State 51

   10 type: SHORT_TYPE •

    $default  reduce using rule 10 (type)


State 52

   11 type: INT_TYPE •

    $default  reduce using rule 11 (type)


State 53

   12 type: LONG_TYPE •

    $default  reduce using rule 12 (type)


State 54

   13 type: FLOAT_TYPE •

    $default  reduce using rule 13 (type)


State 55

   14 type: DOUBLE_TYPE •

    $default  reduce using rule 14 (type)


State 56

   15 type: BOOLEAN_TYPE •

    $default  reduce using rule 15 (type)


State 57

   16 type: STRING_TYPE •

    $default  reduce using rule 16 (type)


State 58

   17 type: ARRAY • LT type GT

    LT  shift, and go to state 87


State 59

   27 global_var_decl: val_var IDENT COLON type • SEMICOLON
   28                | val_var IDENT COLON type • ASSIGN expr SEMICOLON

    ASSIGN     shift, and go to state 88
    SEMICOLON  shift, and go to state 89


State 60

   33 function_var_decl: IDENT COLON • type

    BYTE_TYPE     shift, and go to state 50
    SHORT_TYPE    shift, and go to state 51
    INT_TYPE      shift, and go to state 52
    LONG_TYPE     shift, and go to state 53
    FLOAT_TYPE    shift, and go to state 54
    DOUBLE_TYPE   shift, and go to state 55
    BOOLEAN_TYPE  shift, and go to state 56
    STRING_TYPE   shift, and go to state 57
    ARRAY         shift, and go to state 58

    type  go to state 90


State 61

   34 function_decl: FUN IDENT LPAREN parameter_list RPAREN • COLON type function_body
   35              | FUN IDENT LPAREN parameter_list RPAREN • function_body
   36              | FUN IDENT LPAREN parameter_list RPAREN • SEMICOLON

    SEMICOLON  shift, and go to state 91
    LBRACE     shift, and go to state 92
    COLON      shift, and go to state 93

    function_body  go to state 94


State 62

   38 parameter_list: parameter_list COMMA • function_var_decl

    IDENT  shift, and go to state 21

    function_var_decl  go to state 95


State 63

   81 primary_expr: IDENT •
   85 function_call: IDENT • LPAREN function_call_values_list RPAREN

    LPAREN  shift, and go to state 72

    $default  reduce using rule 81 (primary_expr)


State 64

   76 unary_expr: MINUS unary_expr •

    $default  reduce using rule 76 (unary_expr)


State 65

   78 unary_expr: INC unary_expr •

    $default  reduce using rule 78 (unary_expr)


State 66

   79 unary_expr: DEC unary_expr •

    $default  reduce using rule 79 (unary_expr)


State 67

   77 unary_expr: NOT unary_expr •

    $default  reduce using rule 77 (unary_expr)


State 68

   83 primary_expr: LPAREN expr • RPAREN

    RPAREN  shift, and go to state 96


State 69

   65 assignment_expr: IDENT ASSIGN • assignment_expr

    K_FALSE       shift, and go to state 24
    K_TRUE        shift, and go to state 25
    MINUS         shift, and go to state 26
    INC           shift, and go to state 27
    DEC           shift, and go to state 28
    NOT           shift, and go to state 29
    LPAREN        shift, and go to state 30
    INT           shift, and go to state 31
    REAL          shift, and go to state 32
    STRING        shift, and go to state 33
    MULTI_STRING  shift, and go to state 34
    CHAR          shift, and go to state 35
    IDENT         shift, and go to state 36

    literal              go to state 37
    bool_literal         go to state 38
    logical_or_expr      go to state 40
    logical_and_expr     go to state 41
    equality_expr        go to state 42
    relational_expr      go to state 43
    assignment_expr      go to state 97
    additive_expr        go to state 45
    multiplicative_expr  go to state 46
    unary_expr           go to state 47
    primary_expr         go to state 48
    function_call        go to state 49


State 70

   66 assignment_expr: IDENT PLUS_ASSIGN • assignment_expr

    K_FALSE       shift, and go to state 24
    K_TRUE        shift, and go to state 25
    MINUS         shift, and go to state 26
    INC           shift, and go to state 27
    DEC           shift, and go to state 28
    NOT           shift, and go to state 29
    LPAREN        shift, and go to state 30
    INT           shift, and go to state 31
    REAL          shift, and go to state 32
    STRING        shift, and go to state 33
    MULTI_STRING  shift, and go to state 34
    CHAR          shift, and go to state 35
    IDENT         shift, and go to state 36

    literal              go to state 37
    bool_literal         go to state 38
    logical_or_expr      go to state 40
    logical_and_expr     go to state 41
    equality_expr        go to state 42
    relational_expr      go to state 43
    assignment_expr      go to state 98
    additive_expr        go to state 45
    multiplicative_expr  go to state 46
    unary_expr           go to state 47
    primary_expr         go to state 48
    function_call        go to state 49


State 71

   67 assignment_expr: IDENT MINUS_ASSIGN • assignment_expr

    K_FALSE       shift, and go to state 24
    K_TRUE        shift, and go to state 25
    MINUS         shift, and go to state 26
    INC           shift, and go to state 27
    DEC           shift, and go to state 28
    NOT           shift, and go to state 29
    LPAREN        shift, and go to state 30
    INT           shift, and go to state 31
    REAL          shift, and go to state 32
    STRING        shift, and go to state 33
    MULTI_STRING  shift, and go to state 34
    CHAR          shift, and go to state 35
    IDENT         shift, and go to state 36

    literal              go to state 37
    bool_literal         go to state 38
    logical_or_expr      go to state 40
    logical_and_expr     go to state 41
    equality_expr        go to state 42
    relational_expr      go to state 43
    assignment_expr      go to state 99
    additive_expr        go to state 45
    multiplicative_expr  go to state 46
    unary_expr           go to state 47
    primary_expr         go to state 48
    function_call        go to state 49


State 72

   85 function_call: IDENT LPAREN • function_call_values_list RPAREN

    LPAREN        shift, and go to state 100
    INT           shift, and go to state 31
    REAL          shift, and go to state 32
    STRING        shift, and go to state 33
    MULTI_STRING  shift, and go to state 34
    CHAR          shift, and go to state 35
    IDENT         shift, and go to state 101

    $default  reduce using rule 88 (function_call_values_list)

    literal                    go to state 102
    function_call_values_list  go to state 103
    functionCallVal            go to state 104


State 73

   29 global_var_init: val_var IDENT ASSIGN expr SEMICOLON •

    $default  reduce using rule 29 (global_var_init)


State 74

   53 logical_or_expr: logical_or_expr OR • logical_and_expr

    K_FALSE       shift, and go to state 24
    K_TRUE        shift, and go to state 25
    MINUS         shift, and go to state 26
    INC           shift, and go to state 27
    DEC           shift, and go to state 28
    NOT           shift, and go to state 29
    LPAREN        shift, and go to state 30
    INT           shift, and go to state 31
    REAL          shift, and go to state 32
    STRING        shift, and go to state 33
    MULTI_STRING  shift, and go to state 34
    CHAR          shift, and go to state 35
    IDENT         shift, and go to state 63

    literal              go to state 37
    bool_literal         go to state 38
    logical_and_expr     go to state 105
    equality_expr        go to state 42
    relational_expr      go to state 43
    additive_expr        go to state 45
    multiplicative_expr  go to state 46
    unary_expr           go to state 47
    primary_expr         go to state 48
    function_call        go to state 49


State 75

   55 logical_and_expr: logical_and_expr AND • equality_expr

    K_FALSE       shift, and go to state 24
    K_TRUE        shift, and go to state 25
    MINUS         shift, and go to state 26
    INC           shift, and go to state 27
    DEC           shift, and go to state 28
    NOT           shift, and go to state 29
    LPAREN        shift, and go to state 30
    INT           shift, and go to state 31
    REAL          shift, and go to state 32
    STRING        shift, and go to state 33
    MULTI_STRING  shift, and go to state 34
    CHAR          shift, and go to state 35
    IDENT         shift, and go to state 63

    literal              go to state 37
    bool_literal         go to state 38
    equality_expr        go to state 106
    relational_expr      go to state 43
    additive_expr        go to state 45
    multiplicative_expr  go to state 46
    unary_expr           go to state 47
    primary_expr         go to state 48
    function_call        go to state 49


State 76

   57 equality_expr: equality_expr EQ • relational_expr

    K_FALSE       shift, and go to state 24
    K_TRUE        shift, and go to state 25
    MINUS         shift, and go to state 26
    INC           shift, and go to state 27
    DEC           shift, and go to state 28
    NOT           shift, and go to state 29
    LPAREN        shift, and go to state 30
    INT           shift, and go to state 31
    REAL          shift, and go to state 32
    STRING        shift, and go to state 33
    MULTI_STRING  shift, and go to state 34
    CHAR          shift, and go to state 35
    IDENT         shift, and go to state 63

    literal              go to state 37
    bool_literal         go to state 38
    relational_expr      go to state 107
    additive_expr        go to state 45
    multiplicative_expr  go to state 46
    unary_expr           go to state 47
    primary_expr         go to state 48
    function_call        go to state 49


State 77

   58 equality_expr: equality_expr NEQ • relational_expr

    K_FALSE       shift, and go to state 24
    K_TRUE        shift, and go to state 25
    MINUS         shift, and go to state 26
    INC           shift, and go to state 27
    DEC           shift, and go to state 28
    NOT           shift, and go to state 29
    LPAREN        shift, and go to state 30
    INT           shift, and go to state 31
    REAL          shift, and go to state 32
    STRING        shift, and go to state 33
    MULTI_STRING  shift, and go to state 34
    CHAR          shift, and go to state 35
    IDENT         shift, and go to state 63

    literal              go to state 37
    bool_literal         go to state 38
    relational_expr      go to state 108
    additive_expr        go to state 45
    multiplicative_expr  go to state 46
    unary_expr           go to state 47
    primary_expr         go to state 48
    function_call        go to state 49


State 78

   61 relational_expr: relational_expr GT • additive_expr
